--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .highlight li {
@@ -42,7 +43,7 @@ button {
 }
 
 #remove-btn {
-  margin: 1rem;
+  margin: 1rem 0 0 2rem;
   border: 2px solid rgb(254, 13, 13);
   padding: 0.5rem 2rem;
   background-color: rgba(254, 13, 13, 0.8);
